# Financial-Risk-Analysis-with-PySpark

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  test_approval_system.py
configs/: README.md  etl_config.json
data/: .gitkeep
jobs/: README.md  financial_risk_etl.py
notebooks/: financial_risk_exploration.ipynb
reports/financial_risk_analysis/risk_category=High/: .part-00000-e4f77d56-2765-4435-b522-7b6738f36cc8.c000.snappy.parquet.crc  part-00000-e4f77d56-2765-4435-b522-7b6738f36cc8.c000.snappy.parquet
reports/financial_risk_analysis/risk_category=Low/: .part-00000-e4f77d56-2765-4435-b522-7b6738f36cc8.c000.snappy.parquet.crc  part-00000-e4f77d56-2765-4435-b522-7b6738f36cc8.c000.snappy.parquet
reports/financial_risk_analysis/risk_category=Medium/: .part-00000-e4f77d56-2765-4435-b522-7b6738f36cc8.c000.snappy.parquet.crc  (+1 more)
reports/financial_risk_analysis_summary_age_group/: .part-00000-59ec1741-7150-4049-bfca-d9164b93d032-c000.csv.crc  part-00000-59ec1741-7150-4049-bfca-d9164b93d032-c000.csv
reports/financial_risk_analysis_summary_income_bracket/: .part-00000-7ed3f368-c323-470a-9099-09a1f43ccc5c-c000.csv.crc  part-00000-7ed3f368-c323-470a-9099-09a1f43ccc5c-c000.csv
reports/financial_risk_analysis_summary_risk_category/: .part-00000-79f898a4-eee6-45c2-9ca8-bad626ad119b-c000.csv.crc  part-00000-79f898a4-eee6-45c2-9ca8-bad626ad119b-c000.csv
src/: README.md  __init__.py
src/dependencies/: README.md  logging.py  spark.py
src/utils/: README.md  financial_risk_utils.py
tests/: README.md  conftest.py  test_financial_risk_utils.py
